[workspace]
members = [
    "apps/rust/benchs",
    "apps/rust/clisrv/client",
    "apps/rust/clisrv/server",
    "apps/rust/hello",
    "apps/rust/m3fs",
    "apps/rust/test",
    "apps/rust/unittests",
    "libs/rustbase",
    "libs/rustm3",
]

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
panic = 'abort'
